mejorando info del blog

--- a/blog.html
+++ b/blog.html
@@ -33,19 +33,19 @@
         <article class="entrada">
             <img class="entrada__imagen" src="./img/blog_1.jpg" alt="imagen blog">
             <div class="entrada__contenido">
-                <h3 class="entrada__titulo">¿Como elegir tu primera guitarra?</h3>
+                <h3 class="entrada__titulo">Los mejores guitarristas del blues</h3>
                 <p class="entrada__fecha">11 de diciembre del 2024</p>
-                <p class="entrada__descripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam illo commodi iure quam   assumenda doloremque numquam?</p>
-                <a class="entrada__enlace" href="entrada.html">Leer entrada</a>
+                <p class="entrada__descripcion">Desde los riffs icónicos del rock hasta los intrincados solos del jazz, cada uno de ellos ha redefinido lo que significa dominar este instrumento.</p>
+                <a class="entrada__enlace" href="entrada.html">Leer informe</a>
             </div>
         </article>
         <article class="entrada">
-            <img class="entrada__imagen" src="./img/blog_2.jpg" alt="imagen blog">
+            <img class="entrada__imagen" src="./img/blog_02.jpg" alt="imagen blog">
             <div class="entrada__contenido">
-                <h3 class="entrada__titulo">¿Como elegir tu primera guitarra?</h3>
+                <h3 class="entrada__titulo">Conciertos para este mes</h3>
                 <p class="entrada__fecha">11 de diciembre del 2024</p>
-                <p class="entrada__descripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam illo commodi iure quam   assumenda doloremque numquam?</p>
-                <a class="entrada__enlace" href="entrada.html">Leer entrada</a>
+                <p class="entrada__descripcion">¡La música en vivo no se detiene! Este mes viene cargado de emocionantes conciertos que no querrás perderte. Desde artistas consagrados hasta nuevas promesas, prepárate para disfrutar de espectáculos inolvidables.</p>
+                <a class="entrada__enlace" href="entrada.html">Leer informe</a>
             </div>
         </article>
         <article class="entrada">
@@ -54,7 +54,7 @@
                 <h3 class="entrada__titulo">¿Como elegir tu primera guitarra?</h3>
                 <p class="entrada__fecha">11 de diciembre del 2024</p>
                 <p class="entrada__descripcion">Te daremos consejos clave para elegir tu primera guitarra y encontrar la que se adapte a tu estilo, comodidad y presupuesto</p>
-                <a class="entrada__enlace" href="entrada.html">Leer entrada</a>
+                <a class="entrada__enlace" href="entrada.html">Leer informe</a>
             </div>
         </article>
         <article class="entrada">
@@ -63,7 +63,7 @@
                 <h3 class="entrada__titulo">¿Acústica o eléctrica?</h3>
                 <p class="entrada__fecha">11 de diciembre del 2024</p>
                 <p class="entrada__descripcion">Los mejores consejos para elegir entre una guitarra acústica o eléctrica, según tu estilo, nivel y objetivos.</p>
-                <a class="entrada__enlace" href="entrada.html">Leer entrada</a>
+                <a class="entrada__enlace" href="entrada.html">Leer informe</a>
             </div>
         </article>
     </div>
