--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <!--no reutilizamos ya que posee algunas diferencias-->
                 <div class="guitarra__contenido">
                     <h3 class="guitarra__nombre">Borland</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__descripcion">Con un diseño elegante y una construcción robusta, ofrece una experiencia de tocabilidad cómoda y un sonido claro.</p>
                     <p class="guitarra__costo">$100</p>
                     <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
                 </div>
@@ -83,7 +83,7 @@
                 <!--no reutilizamos ya que posee algunas diferencias-->
                 <div class="guitarra__contenido">
                     <h3 class="guitarra__nombre">VAI</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__descripcion">Con su exclusivo Monkey Grip, configuración de pastillas DiMarzio Evolution (HSH), mástil ultradelgado y puente flotante Edge Tremolo.</p>
                     <p class="guitarra__costo">$100</p>
                     <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
                 </div>
@@ -93,7 +93,7 @@
                 <!--no reutilizamos ya que posee algunas diferencias-->
                 <div class="guitarra__contenido">
                     <h3 class="guitarra__nombre">Thompson</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__descripcion">Excelente relación calidad-precio, ideal para guitarristas principiantes y de nivel intermedio proporcionandoles un sonido claro.</p>
                     <p class="guitarra__costo">$100</p>
                     <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
                 </div>
@@ -103,7 +103,7 @@
                 <!--no reutilizamos ya que posee algunas diferencias-->
                 <div class="guitarra__contenido">
                     <h3 class="guitarra__nombre">Dale</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__descripcion">La guitarra DALE combina un diseño clásico y funcionalidad, ofreciendo un sonido equilibrado y una construcción duradera.</p>
                     <p class="guitarra__costo">$100</p>
                     <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
                 </div>
@@ -113,7 +113,7 @@
                 <!--no reutilizamos ya que posee algunas diferencias-->
                 <div class="guitarra__contenido">
                     <h3 class="guitarra__nombre">Campbell</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__descripcion">Con una construcción robusta, diseño clásico y un sonido equilibrado, perfecto para quienes buscan iniciar su camino musical.</p>
                     <p class="guitarra__costo">$100</p>
                     <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
                 </div>
@@ -123,7 +123,7 @@
                 <!--no reutilizamos ya que posee algunas diferencias-->
                 <div class="guitarra__contenido">
                     <h3 class="guitarra__nombre">Reed</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
+                    <p class="guitarra__descripcion">Reconocida por su diseño elegante y su sonido versátil ,adaptables a diferentes estilos musicales y necesidades.</p>
                     <p class="guitarra__costo">$100</p>
                     <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
                 </div>
@@ -177,19 +177,19 @@
             <article class="entrada">
                 <img class="entrada__imagen" src="./img/blog_1.jpg" alt="imagen blog">
                 <div class="entrada__contenido">
-                    <h3 class="entrada__titulo">¿Como elegir tu primera guitarra?</h3>
+                    <h3 class="entrada__titulo">Los mejores guitarristas</h3>
                     <p class="entrada__fecha">11 de diciembre del 2024</p>
-                    <p class="entrada__descripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam illo commodi iure quam   assumenda doloremque numquam?</p>
-                    <a class="entrada__enlace" href="entrada.html">Leer entrada</a>
+                    <p class="entrada__descripcion">Desde los riffs icónicos del rock hasta los intrincados solos del jazz, cada uno de ellos ha redefinido lo que significa dominar este instrumento.</p>
+                    <a class="entrada__enlace" href="entrada.html">Leer informe</a>
                 </div>
             </article>
             <article class="entrada">
-                <img class="entrada__imagen" src="./img/blog_2.jpg" alt="imagen blog">
+                <img class="entrada__imagen" src="./img/blog_02.jpg" alt="imagen blog">
                 <div class="entrada__contenido">
-                    <h3 class="entrada__titulo">¿Como elegir tu primera guitarra?</h3>
+                    <h3 class="entrada__titulo">Conciertos para este mes</h3>
                     <p class="entrada__fecha">11 de diciembre del 2024</p>
-                    <p class="entrada__descripcion">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam illo commodi iure quam   assumenda doloremque numquam?</p>
-                    <a class="entrada__enlace" href="entrada.html">Leer entrada</a>
+                    <p class="entrada__descripcion">¡La música en vivo no se detiene! Este mes viene cargado de emocionantes conciertos que no querrás perderte. Desde artistas consagrados hasta nuevas promesas, prepárate para disfrutar de espectáculos inolvidables.</p>
+                    <a class="entrada__enlace" href="entrada.html">Leer informe</a>
                 </div>
             </article>
             <article class="entrada">
@@ -198,7 +198,7 @@
                     <h3 class="entrada__titulo">¿Como elegir tu primera guitarra?</h3>
                     <p class="entrada__fecha">11 de diciembre del 2024</p>
                     <p class="entrada__descripcion">Te daremos consejos clave para elegir tu primera guitarra y encontrar la que se adapte a tu estilo, comodidad y presupuesto</p>
-                    <a class="entrada__enlace" href="entrada.html">Leer entrada</a>
+                    <a class="entrada__enlace" href="entrada.html">Leer informe</a>
                 </div>
             </article>
             <article class="entrada">
@@ -207,7 +207,7 @@
                     <h3 class="entrada__titulo">¿Acústica o eléctrica?</h3>
                     <p class="entrada__fecha">11 de diciembre del 2024</p>
                     <p class="entrada__descripcion">Los mejores consejos para elegir entre una guitarra acústica o eléctrica, según tu estilo, nivel y objetivos.</p>
-                    <a class="entrada__enlace" href="entrada.html">Leer entrada</a>
+                    <a class="entrada__enlace" href="entrada.html">Leer informe</a>
                 </div>
             </article>
         </div>
