update description of productos.html

--- a/producto.html
+++ b/producto.html
@@ -52,7 +52,7 @@
         <img class="guitarra__imagen" src="./img/guitarra_04.jpg" alt="modelo 4">
         <div class="guitarra__contenido">
             <h3 class="guitarra__nombre">VAI</h3>
-            <p class="guitarra__descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde magni minus dicta, voluptate eum ullam numquam nesciunt iste incidunt corrupti expedita, assumenda quaerat dignissimos quos eius ex, doloribus obcaecati odit.</p>
+            <p class="guitarra__descripcion">Una guitarra icónica diseñada en colaboración con Steve Vai.Perfecta combinación de diseño llamativo y rendimiento profesional. ¡Lista para inspirar!</p>
             <p class="guitarra__costo"><span>$</span>100</p>
             <form class="guitarra__formulario">
               <label class="guitarra__label">Cantidad :</label>
