add db con funcionalidades usando js

--- a/tienda.html
+++ b/tienda.html
@@ -32,127 +32,20 @@
         <div class="baterias baterias__contenedor">
             <h3 class="baterias__title">Baterías</h3>
             <div class="baterias__grid">
-                <div class="bateria">
-                    <img src="img/bateria_01.jpg" alt="modelo 1">
-                    <div class="bateria__contenido">
-                        <h3 class="bateria__nombre">Tama</h3>
-                        <p class="bateria__costo">$100</p>
-                        <a class="bateria__enlace" href="producto.html">Ver Producto</a>
-                    </div>
-                </div>
-                <div class="bateria">
-                    <img src="img/bateria_02.jpg" alt="modelo 1">
-                     <div class="bateria__contenido">
-                        <h3 class="bateria__nombre">Sonor</h3>
-                        <p class="bateria__costo">$100<p>                         
-                        <a class="bateria__enlace" href="producto.html">Ver Producto</a>
-                    </div>
-                </div>
-                <div class="bateria">
-                    <img src="img/bateria_03.jpg" alt="modelo 1">
-                     <div class="bateria__contenido">
-                        <h3 class="bateria__nombre">Yamaha</h3>
-                        <p class="bateria__costo">$100<p>                         
-                        <a class="bateria__enlace" href="producto.html">Ver Producto</a>
-                    </div>
-                </div>
+                <!--contenido js  -->
             </div>
         </div>  
         <div class="guitarras guitarras__contenedor">
             <h3 class="guitarras__title">Guitarras</h3>
             <div class="guitarras__grid">
-            <div class="guitarra">
-                <img class="guitarra__imagen" src="./img/guitarra_03.jpg" alt="modelo 3">
-                <!--no reutilizamos ya que posee algunas diferencias-->
-                <div class="guitarra__contenido">
-                    <h3 class="guitarra__nombre">Borland</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
-                    <p class="guitarra__costo">$100</p>
-                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
-                </div>
-            </div>
-            <div class="guitarra">
-                <img class="guitarra__imagen" src="./img/guitarra_04.jpg" alt="modelo 4">
-                <!--no reutilizamos ya que posee algunas diferencias-->
-                <div class="guitarra__contenido">
-                    <h3 class="guitarra__nombre">VAI</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
-                    <p class="guitarra__costo">$100</p>
-                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
-                </div>
-            </div>
-            <div class="guitarra">
-                <img class="guitarra__imagen" src="./img/guitarra_05.jpg" alt="modelo 5">
-                <!--no reutilizamos ya que posee algunas diferencias-->
-                <div class="guitarra__contenido">
-                    <h3 class="guitarra__nombre">Thompson</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
-                    <p class="guitarra__costo">$100</p>
-                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
-                </div>
-            </div>
-            <div class="guitarra">
-                <img class="guitarra__imagen" src="./img/guitarra_08.jpg" alt="modelo 8">
-                <!--no reutilizamos ya que posee algunas diferencias-->
-                <div class="guitarra__contenido">
-                    <h3 class="guitarra__nombre">Dale</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
-                    <p class="guitarra__costo">$100</p>
-                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
-                </div>
-            </div>
-            <div class="guitarra">
-                <img class="guitarra__imagen" src="./img/guitarra_10.jpg" alt="modelo 10">
-                <!--no reutilizamos ya que posee algunas diferencias-->
-                <div class="guitarra__contenido">
-                    <h3 class="guitarra__nombre">Campbell</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
-                    <p class="guitarra__costo">$100</p>
-                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
-                </div>
-            </div>
-            <div class="guitarra">
-                <img class="guitarra__imagen" src="./img/guitarra_11.jpg" alt="modelo 11">
-                <!--no reutilizamos ya que posee algunas diferencias-->
-                <div class="guitarra__contenido">
-                    <h3 class="guitarra__nombre">Reed</h3>
-                    <p class="guitarra__descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aperiam officia quidem sint laudantium soluta.</p>
-                    <p class="guitarra__costo">$100</p>
-                    <a class="guitarra__enlace" href="producto.html">Ver Producto</a>
-                </div>
+                <!-- Contenido js de producto -->
             </div>
         </div>
         <div class="otros otros__contenedor">
             <h3 class="otros__title">Otros</h3>
             <div class="otros__grid">
-                <div class="bajo">
-                    <img src="img/bajo-fender.jpg" alt="imagen bajo">
-                    <div class="bajo__contenido">
-                        <h3 class="bajo__nombre">Fender American Pro</h3>
-                        <h4>Bajo</h4>
-                        <p class="bajo__costo">$100</p>
-                        <a class="bajo__enlace" href="producto.html">Ver producto</a>
-                    </div>
-                </div>
-                <div class="piano">
-                    <img class="piano__imagen" src="img/piano.jfif" alt="piano imagen">
-                    <div class="piano__contenido">
-                        <h3 class="piano__nombre">Grotian</h3>
-                        <h4 class="piano__subtitulo">Piano</h4>
-                        <p class="piano__costo">$100</p>
-                        <a class="piano__enlace" href="producto.html">Ver producto</a>
-                    </div>
-                </div>
-                <div class="saxofon">
-                    <img src="img/saxofon.jpg" alt="saxofon imagen">
-                    <div class="saxofon__contenido">
-                        <h3 class="saxofon__nombre">Yamaha YTS-62</h3>
-                        <h4>Saxofon</h4>
-                        <p class="saxofon__costo">$100</p>
-                        <a class="saxofon__enlace" href="producto.html">Ver producto</a>
-                    </div>
-                </div>
-            </div>
+                <!-- Contenido js de producto -->
+            </div> 
         </div>
     </div>
     </main>
@@ -167,5 +60,6 @@
             <h2 class="footer__derecho">Elige tu producto favorito</h2>
         </div>
     </footer>
+    <script type="module" src="js/tienda.js"></script>
 </body>
 </html>
