--- a/producto.html
+++ b/producto.html
@@ -49,35 +49,8 @@
     </header>
     <main class="contenedor">
       <div class="guitarra">
-        <img class="guitarra__imagen" src="./img/guitarra_04.jpg" alt="modelo 4">
-        <div class="guitarra__contenido">
-            <h3 class="guitarra__nombre">VAI</h3>
-            <p class="guitarra__descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde magni minus dicta, voluptate eum ullam numquam nesciunt iste incidunt corrupti expedita, assumenda quaerat dignissimos quos eius ex, doloribus obcaecati odit.</p>
-            <p class="guitarra__costo"><span>$</span>100</p>
-            <form class="guitarra__formulario">
-              <label class="guitarra__label">Cantidad :</label>
-              <select class="guitarra__cantidad">
-                <option value="">--Seleccione--</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-              </select>
-              <input 
-              type="submit"
-              class="guitarra__agregar-carrito"    
-              value="Agregar al carrito"
-              data-id="1"
-              >
-              <input 
-              type="submit"
-              class="guitarra__comprar-ahora"    
-              value="Comprar ahora"
-              >
-            </form>
-        </div>
-    </div>
+        <!-- lo de js -->
+      </div>
     </main>
     <footer class="footer">
         <div class="footer__contenedor footer__contenido">
@@ -92,5 +65,6 @@
     </footer>
     <script type="module" src="js/app.js"></script>
     <script type="module" src="js/activeCart.js"></script>
+    <!-- <script type="module" src="js/producto.js"></script> -->
 </body>
 </html>
