update app.js and styles

--- a/producto.html
+++ b/producto.html
@@ -48,7 +48,7 @@
         </div>
     </header>
     <main class="contenedor">
-      <div class="guitarra">
+      <div class="producto">
         <!-- lo de js -->
       </div>
     </main>
